Bug 146003 - DRAW, IMPRESS <F5> NAVIGATOR (non-SB): impossible to scroll so that higlighted slide leaves visible area
Summary: DRAW, IMPRESS <F5> NAVIGATOR (non-SB): impossible to scroll so that higlighte...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.4.0 target:7.3.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Navigator Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2021-12-02 09:41 UTC by Rainer Bielefeld Retired
Modified: 2022-10-10 20:59 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document for testing (9.53 KB, application/vnd.oasis.opendocument.graphics)
2021-12-02 09:41 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2021-12-02 09:41:46 UTC
Created attachment 176647 [details]
Sample document for testing

Steps how to reproduce with attached sample document and Installation of Version 7.2.3.2 (x64) Build  d166454616c1632304285822f9c83ce2e660fd92; CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win; Locale: de-DE (de_DE); UI: de-DE; Calc: threaded;  My normal User Profile:

1. Open attached "TestDocument.odg"
2. I necessary open Navigator with <F5>
   » Slide 1 should be highlighted
3. Click on Vertical Scroll Slider, drag to bottom of scroll bar
   Expected: Slide 154 becomes visible at bottom of list in Navigator
   Actual: In the moment when higlighted item in Navigator leaves visible
      area view jumps back so that highlighted item becomes visible again 😥

Additionla Info:
----------------
a) General Problem, if you click slide 100 in Slides Area and then redo test
   in step (3) you will not be able to get higlighted Slide 100 out of visible 
   area at top or bottom end of navigator.

b)Same in Impress, but ok in Writer

c) Was still ok with Server Installation of Version: 6.0.7.3 (x64) 
   Build-ID dc89aa7a9eabfd848af146d5086077aeed2ae4a5; 
   CPU-Threads: 12; BS: Windows 10.0; UI-Render: GL; 
   Gebietsschema: de-DE (de_DE); Calc: CL, Special devUserProfile
   (I did not do systematic test for first appearance)

d) Still a problem with Version: 7.4.0.0.alpha0+ (x64)
Comment 1 Rainer Bielefeld Retired 2021-12-02 09:45:22 UTC
e) No obvious DUPs found with <https://bugs.documentfoundation.org/buglist.cgi?cmdtype=dorem&remaction=run&namedcmd=DUPs146003&sharer_id=19321>
Comment 2 Ezinne 2021-12-03 21:51:34 UTC
Reproducible in:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d272bf4f8f3a083b8c37f7b10f89cd2bf76b7d21
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Ezinne 2021-12-03 22:04:32 UTC
Not reproducible in older build:

Version: 6.0.0.0.beta1
Build ID: 97471ab4eb4db4c487195658631696bb3238656c
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 4 Kevin Suo 2021-12-04 00:58:44 UTC
[suokunlong@fedora bibisect-linux-64-7.1-CN]$ git bisect log
...
# bad: [6ed0bd7199f45635c4f5fbe7bee1c5787367aa3a] 2020-10-28 12:03:48 +0100 7a09d67e1c76db7cb6a87a2ceaa6de7325342b75
git bisect bad 6ed0bd7199f45635c4f5fbe7bee1c5787367aa3a
# good: [9fef009b6bb500006fedf22708b8b42c6865261e] 2020-10-22 09:31:40 +0200 b6fb3551d890f0ccbb88eb7ab81c83f9a2b1694c
...
# good: [2590c0bab7318b10ca78ad747a689607f119a2e5] 2020-10-28 10:44:09 +0100 f57e30eb56c1b593dcb9e801202ded9d079d9043
git bisect good 2590c0bab7318b10ca78ad747a689607f119a2e5
# first bad commit: [6ed0bd7199f45635c4f5fbe7bee1c5787367aa3a] 2020-10-28 12:03:48 +0100 7a09d67e1c76db7cb6a87a2ceaa6de7325342b75

Source range: f57e30eb56c1b593dcb9e801202ded9d079d9043..7a09d67e1c76db7cb6a87a2ceaa6de7325342b75

7a09d67e1c76 (convert some more long -> tools::Long, 2020-10-28)
49a39d1abccc (pdfium: add an FPDF_RenderPageBitmap() wrapper, 2020-10-28)
e19d85856e9c (Update git submodules, 2020-10-28)
42efdb71bce9 (strtol returns long, so that needs to be used here, 2020-10-28)

Seems 7a09d67e1c76 is the only one related to this issue.

commit 7a09d67e1c76db7cb6a87a2ceaa6de7325342b75
Author: Noel <noelgrandin@gmail.com>
Date:   Wed Oct 28 09:15:54 2020 +0200

    convert some more long -> tools::Long

Adding Noel Grandin to cc: would you please take a look? Thanks.
Comment 5 Noel Grandin 2021-12-21 12:02:12 UTC
I can't reprodiuce this on current master, so somebody else must have fixed it
Comment 6 Aron Budea 2021-12-23 04:59:29 UTC
(In reply to Noel Grandin from comment #5)
> I can't reprodiuce this on current master, so somebody else must have fixed
> it
The bug is still reproducible as of 7.4.0.0.alpha0+ (40487d9c81c69c4e5ee1621e53c8162ae33c80b2) / Ubuntu, so I doubt that's the case. Note that it only occurs with the dockable Navigator window (F5), and not with the Navigator sidebar (actually, it does occur with the sidebar as well, if the Navigator window is open).

However, my bibisect results with bibisect-linux-64-7.1 are different, and point to the following commit. Adding CC: to Jim Raykowski.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=46ecd31445bda45e10d58e937ff468a1a8f17da2
author		Jim Raykowski <raykowj@gmail.com>	2020-10-28 22:18:11 -0800
committer	Jim Raykowski <raykowj@gmail.com>	2020-10-30 07:56:06 +0100

tdf#106613 Draw: Make sidebar Navigator update after slide rename
Comment 7 V Stuart Foote 2021-12-23 14:02:30 UTC
@Jim, * -- I guess this makes sense, we kept two instances of the Navigator and while they use the same code from the SB, the UI improvements to the Navigator have been directed against the SB instance. UI for the second <F5> instance can get out of sync.  This alone is probably a simple fix. But, I know its a big ask but could we have another look at the SB refactoring needed for multiple SB decks and consolidating the two Navigator instances by implementing bug 85905?
Comment 8 Jim Raykowski 2021-12-24 06:50:49 UTC
Here is a better fix for the sidebar Navigator not updating after slide rename that doesn't exhibit the reported regression behavior plus makes slide rename handled by the drawing shell update both floating and sidebar Navigators. i.e, .uno:RenamePage handling which is used in the context menu and main menu and can be added to toolbars.

https://gerrit.libreoffice.org/c/core/+/127397
Comment 9 Commit Notification 2021-12-24 22:22:13 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9bfc42015acd6ae3475ab7927ccc006507cc38a2

tdf#146003 tdf#106613 Draw: fix slide rename not updated in Navigator

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2021-12-27 11:34:31 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/f0ae7571b7f0d8b03f6c365d6c24ee69d973c781

tdf#146003 tdf#106613 Draw: fix slide rename not updated in Navigator

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2022-05-02 11:36:26 UTC
Hi Jim,
Should this issue be closed as RESOLVED FIXED ?
Comment 12 Jim Raykowski 2022-10-10 20:59:10 UTC
Apologies for the delay.

Tested with:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 53d5f5e15c005d95fa8c9d24d98e26afd2ca2103
CPU threads: 2; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded


Marking as Resolved Fixed.