tdf#146003 tdf#106613 Draw: fix slide rename not updated in Navigator

Change-Id: Iee2d34e3192e3f7875ab10f3e79e9dc1a2fb20b8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127397
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>